--- a/Pixel 2/Info.plist
+++ b/Pixel 2/Info.plist
@@ -12,7 +12,7 @@
 				<string>px2</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string></string>
+			<string>/Users/indikernick/Dev/Projects/C++/Pixel 2/Pixel 2/Assets.xcassets/Document.iconset</string>
 			<key>CFBundleTypeName</key>
 			<string>Pixel Animation</string>
 			<key>CFBundleTypeOSTypes</key>
