Use relative path to reference doc icon in info.plist

--- a/Info.plist
+++ b/Info.plist
@@ -12,7 +12,7 @@
 				<string>px2</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>/Users/indikernick/Dev/Projects/C++/Pixel 2/Pixel 2/Assets.xcassets/Document.icns</string>
+			<string>../Resources/Document.icns</string>
 			<key>CFBundleTypeName</key>
 			<string>Pixel Animation</string>
 			<key>CFBundleTypeOSTypes</key>
