--- a/Info.plist
+++ b/Info.plist
@@ -9,7 +9,7 @@
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
-				<string>px2</string>
+				<string>animera</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
 			<string>../Resources/Document.icns</string>
