Add tests for fill

--- a/Animera.xcodeproj/xcshareddata/xcschemes/Graphics-Test.xcscheme
+++ b/Animera.xcodeproj/xcshareddata/xcschemes/Graphics-Test.xcscheme
@@ -63,7 +63,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-b"
+            argument = "--break"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
