Xcode console STILL doesn't support color

--- a/Animera.xcodeproj/xcshareddata/xcschemes/Graphics-Test.xcscheme
+++ b/Animera.xcodeproj/xcshareddata/xcschemes/Graphics-Test.xcscheme
@@ -64,6 +64,10 @@
             argument = "--break"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--use-colour no"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
