Parse export format

--- a/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
+++ b/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
@@ -59,6 +59,12 @@
             ReferencedContainer = "container:Animera.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "open /Users/indikernick/Desktop/Test/sprites/test.animera"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
