Remove LayerSelect and FrameSelect enums

--- a/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
+++ b/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
@@ -62,7 +62,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "open /Users/indikernick/Desktop/Test/sprites/test.animera"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
