Try compositing a region
HOLY SHIT THAT MADE A HUGE DIFFERENCE!

Editor::composite just got 100x faster! That's incredible!

--- a/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
+++ b/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
@@ -40,9 +40,9 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      buildConfiguration = "Release"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -62,6 +62,10 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "open /Users/indikernick/Desktop/Test/sprites/test.animera"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "open /Users/indikernick/Desktop/screenshot.png"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
