mouseLeave when changing tools and cells

--- a/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
+++ b/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
@@ -70,6 +70,10 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "new 4096 4096"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "new 32 32"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
