--- a/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
+++ b/Animera.xcodeproj/xcshareddata/xcschemes/Animera.xcscheme
@@ -69,8 +69,12 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "new 4096 4096"
+            argument = "open /Users/indikernick/Dev/Projects/C++/Animera/Sprites/icon.animera"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "new 4096 4096"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "new 64 64"
