Refactor group data structure
The UI code is now able to easily query the data structure. The UI can view the data structure but it has to emit signals if it wants to modify it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,8 @@ add_executable(Animera
     "src/gradient tool.cpp"
     "src/gradient tool.hpp"
     "src/graphics convert.hpp"
+    "src/group array.cpp"
+    "src/group array.hpp"
     "src/hex input widget.cpp"
     "src/hex input widget.hpp"
     "src/hex input widget.moc"
