Move sprite packing into a dedicated class
Support for gray format was also added. Supporting indexed pixel format seems a bit pointless. OTOH, indexed animation format seems pretty useful although it's a little annoying to implement.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,6 +170,8 @@ add_executable(Animera
     "src/separator widget.hpp"
     src/settings.cpp
     src/settings.hpp
+    "src/sprite packer.cpp"
+    "src/sprite packer.hpp"
     "src/status bar widget.cpp"
     "src/status bar widget.hpp"
     "src/status bar widget.moc"
