Properly rename Sprite to Animation

--- a/Info.plist
+++ b/Info.plist
@@ -14,7 +14,7 @@
 			<key>CFBundleTypeIconFile</key>
 			<string>Document</string>
 			<key>CFBundleTypeName</key>
-			<string>Animera Sprite</string>
+			<string>Animera Animation</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>LSHandlerRank</key>
