Make the canvas resizable
It might be useful to automatically translate/scale cels upon resizing. Though, this isn't something I would really use often. I usually know the size I want before I start drawing, and if I decide to change the size, I usually want to start from scratch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,8 @@ add_executable(Animera
     "src/quit dialog.moc"
     "src/radio button widget.cpp"
     "src/radio button widget.hpp"
+    "src/resize canvas dialog.cpp"
+    "src/resize canvas dialog.hpp"
     src/resources.cpp
     "src/sample object.cpp"
     "src/sample object.hpp"
